--- a/main.css
+++ b/main.css
@@ -16,21 +16,21 @@ body{
 }
 
 .key{
+    width: var(--width);
+    height: calc(var(--width)*4);
 
 }
 
 .white{
-    width: 100px;
-    height: 400px;
+    --width: 100px;
     background-color: white;
     border: 1px solid #333;
 }
 
 .black{
-    width: 60px;
-    height: 240px;
+    --width: 60px;
     background-color: black;
-    margin-left: -30px;
-    margin-right: -30px;
+    margin-left: calc(var(--width)/-2);
+    margin-right: calc(var(--width)/-2);
     z-index: 2;
 }
