--- a/main.css
+++ b/main.css
@@ -27,10 +27,18 @@ body{
     border: 1px solid #333;
 }
 
+.white.active{
+    background-color: rgb(231, 213, 213);
+}
+
 .black{
     --width: 60px;
     background-color: black;
     margin-left: calc(var(--width)/-2);
     margin-right: calc(var(--width)/-2);
     z-index: 2;
+}
+
+.black.active{
+    background-color: rgb(95, 85, 85);
 }
