--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,10 @@
 </head>
 <body>
 
+    <div class="buttons">
+        <button class="record-button btn active">Record</button>
+    </div>
+
     <div class="piano">
         <div data-note="C" class="key white"></div>
         <div data-note="Db" class="key black"></div>
