--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
 <body>
 
     <div class="buttons">
-        <button class="record-button btn active">Record</button>
+        <button class="record-button btn">Record</button>
     </div>
 
     <div class="piano">
