Extra buttons with logic

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,8 @@
 
     <div class="buttons">
         <button class="record-button btn">Record</button>
+        <button class="play-button btn">Play</button>
+        <button class="save-button btn">Save</button>
     </div>
 
     <div class="piano">
