Gettin data from database with song link

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,16 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
     <script src="app.js" defer></script>
     <title>Piano Piece</title>
 </head>
 <body>
-
+    
     <div class="buttons">
         <button class="record-button btn">Record</button>
         <button class="play-button btn">Play</button>
         <button class="save-button btn">Save</button>
+
+        
     </div>
+    <a href="#" class="btn song-link">View Song</a>
 
     <div class="piano">
         <div data-note="C" class="key white"></div>
