--- a/public/main.css
+++ b/public/main.css
@@ -44,7 +44,8 @@ body{
     background-color: rgb(95, 85, 85);
 }
 
-.buttons{
+.buttons,
+.song-link{
     margin-bottom: 2rem;
     display: flex;
 }
@@ -85,12 +86,14 @@ body{
 
 
 .play-button,
-.save-button{
+.save-button,
+.song-link{
     display: none;
 }
 
 .play-button.show,
-.save-button.show{
+.save-button.show,
+.song-link.show{
     display: block;
 }
 
